--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
    <head>
       <title> Main Page </title>
-         <link rel="stylesheet" href="loginstyle.css/loginstyle.css">
+         <link rel="stylesheet" href="./loginstyle.css">
          <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
       </head>
       <body>
